[package]
name = "px-wsdom-core"
version = "0.0.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wishawa/wsdom"
description = "for the wsdom crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false }
ref-cast = "1"
futures-core = { version = "0.3", default-features = false }
pin-project-lite = "0.2.15"
sha3 = "0.10.8"
hex = "0.4.3"
futures-util = "0.3.31"
spin = "0.10.0"
hashbrown = { version = "0.15.2", features = ["default-hasher"] }

[dev-dependencies]
# wsdom = { path = "../wsdom/", packege = "px-wsdom" }
futures-util = { version = "0.3.30" }
