[package]
name = "px-wsdom-ts-convert"
version = "0.0.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wishawa/wsdom"
description = "for the wsdom crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = "0.5.17"
proc-macro2 = "1"
quote = "1"
